apps/base/workshops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workshops
  namespace: workshops
spec:
  selector:
    app: workshops
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
